--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d restaurant-mock-app"
+    "eject": "react-scripts eject"
   },
   "repository": {
     "type": "git",
