--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/sathesbitmaker/final-restaurant-mock-app.git"
+    "url": "git+https://github.com/sathesbitmaker/final-restaurant-mock-app.git"
   },
   "eslintConfig": {
     "extends": [
