--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "restaurant-mock-app",
+  "name": "final-restaurant-mock-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "aos": "^2.3.4",
+    "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.2",
@@ -14,14 +15,16 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "deploy": "gh-pages -d restaurant-mock-app"
+    "eject": "react-scripts eject"
   },
+  "homepage": "https://sathesbitmaker.github.io/final-restaurant-mock-app/",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sathesbitmaker/restaurant-mock-app.git"
+    "url": "git+https://github.com/sathesbitmaker/final-restaurant-mock-app.git"
   },
   "eslintConfig": {
     "extends": [
@@ -29,7 +32,6 @@
       "react-app/jest"
     ]
   },
-  "homepage": "https://sathesbitmaker.github.io/restaurant-mock-app/",
   "browserslist": {
     "production": [
       ">0.2%",
